--- a/src/components/Navbar/NavBar.module.css
+++ b/src/components/Navbar/NavBar.module.css
@@ -2,23 +2,26 @@
   text-align: center;
   grid-area: nav;
   background-color: #61dafb;
-  color: #282c34;
 }
 .nav a {
-  text-decoration: none;
   color: white;
-}
-.nav a.active {
-  color: #282c34;
-}
-.friends {
+  text-decoration: none;
+  font-weight: bold;
   margin-top: 1em;
 }
-.friendsNav {
+.nav .active {
+  color: #282c34;
+}
+.item {
+  font-weight: bold;
+  margin-top: 1em;
+}
+
+/* .friendsNav {
   display: grid;
-  /* grid-template-rows: 60px 1fr; */
+  grid-template-rows: 60px 1fr;
   grid-template-columns: 2fr 2fr;
-  /* grid-gap: 5px; */
+  grid-gap: 5px;
   margin: 0 auto;
   grid-template-areas: "per per";
 }
@@ -31,4 +34,4 @@
 .friends h4 {
   color: #282c34;
   font-size: 0.1em;
-}
+} */
